shadow fix on mobile

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -169,7 +169,7 @@
         display: flex;
         flex-direction: column;
         margin-top: 20px;
-        box-shadow: 4px 4px 7px black;
+        /* box-shadow: 4px 4px 7px black; */
     }
 
     .end-button {
